Update Thai Translation

--- a/src/main/resources/assets/wildfirefly/lang/th_th.json
+++ b/src/main/resources/assets/wildfirefly/lang/th_th.json
@@ -1,24 +1,24 @@
 {
-  "itemGroup.wildfirefly.main": "Wild Firefly",
-  "item.wildfirefly.firefly_in_a_bottle": "หิ่งห้อยในขวด",
-  "item.wildfirefly.firefly_spawn_egg": "Firefly Spawn Egg",
+  "itemGroup.wildfirefly.main": "ไวด์ฟายฟราย",
+  "item.wildfirefly.firefly_in_a_bottle": "ขวดแก้วหิ่งห้อย",
+  "item.wildfirefly.firefly_spawn_egg": "ไข่เกิดหิ่งห้อย",
   "color.wildfirefly.rainbow" : "รุ้ง",
   "block.wildfirefly.white_firefly_lantern": "โคมไฟหิ่งห้อยสีขาว",
-  "block.wildfirefly.orange_firefly_lantern": "Orange Firefly Lantern",
-  "block.wildfirefly.magenta_firefly_lantern": "Magenta Firefly Lantern",
-  "block.wildfirefly.light_blue_firefly_lantern": "Light Blue Firefly Lantern",
-  "block.wildfirefly.yellow_firefly_lantern": "Yellow Firefly Lantern",
-  "block.wildfirefly.lime_firefly_lantern": "Lime Firefly Lantern",
-  "block.wildfirefly.pink_firefly_lantern": "Pink Firefly Lantern",
-  "block.wildfirefly.gray_firefly_lantern": "Gray Firefly Lantern",
-  "block.wildfirefly.light_gray_firefly_lantern": "Light Gray Firefly Lantern",
-  "block.wildfirefly.cyan_firefly_lantern": "Cyan Firefly Lantern",
-  "block.wildfirefly.purple_firefly_lantern": "Purple Firefly Lantern",
-  "block.wildfirefly.blue_firefly_lantern": "Blue Firefly Lantern",
-  "block.wildfirefly.brown_firefly_lantern": "Brown Firefly Lantern",
-  "block.wildfirefly.green_firefly_lantern": "Green Firefly Lantern",
-  "block.wildfirefly.red_firefly_lantern": "Red Firefly Lantern",
-  "block.wildfirefly.black_firefly_lantern": "Black Firefly Lantern",
+  "block.wildfirefly.orange_firefly_lantern": "โคมไฟหิ่งห้อยสีส้ม",
+  "block.wildfirefly.magenta_firefly_lantern": "โคมไฟหิ่งห้อยสีบานเย็น",
+  "block.wildfirefly.light_blue_firefly_lantern": "โคมไฟหิ่งห้อยสีฟ้า",
+  "block.wildfirefly.yellow_firefly_lantern": "โคมไฟหิ่งห้อยสีเหลือง",
+  "block.wildfirefly.lime_firefly_lantern": "โคมไฟหิ่งห้อยสีเขียวอ่อน",
+  "block.wildfirefly.pink_firefly_lantern": "โคมไฟหิ่งห้อยสีชมพู",
+  "block.wildfirefly.gray_firefly_lantern": "โคมไฟหิ่งห้อยสีเทา",
+  "block.wildfirefly.light_gray_firefly_lantern": "โคมไฟหิ่งห้อยสีเทาอ่อน",
+  "block.wildfirefly.cyan_firefly_lantern": "โคมไฟหิ่งห้อยสีฟ้าคราม",
+  "block.wildfirefly.purple_firefly_lantern": "โคมไฟหิ่งห้อยสีม่วง",
+  "block.wildfirefly.blue_firefly_lantern": "โคมไฟหิ่งห้อยสีน้ำเงิน",
+  "block.wildfirefly.brown_firefly_lantern": "โคมไฟหิ่งห้อยสีน้ำตาล",
+  "block.wildfirefly.green_firefly_lantern": "โคมไฟหิ่งห้อยสีเขียว",
+  "block.wildfirefly.red_firefly_lantern": "โคมไฟหิ่งห้อยสีแดง",
+  "block.wildfirefly.black_firefly_lantern": "โคมไฟหิ่งห้อยสีดำ",
   "block.wildfirefly.rainbow_firefly_lantern": "โคมไฟหิ่งห้อยสีรุ้ง",
   "block.wildfirefly.unlit_lantern": "โคมไฟไม่ติดไฟ",
   "entity.wildfirefly.firefly": "หิ่งห้อย"
