Feed frogs with firefly in a bottle
-they'll get poison tho.
-changed use method to unOnBlock method in FireflyBottleItem.

--- a/src/main/resources/assets/wildfirefly/lang/th_th.json
+++ b/src/main/resources/assets/wildfirefly/lang/th_th.json
@@ -23,6 +23,6 @@
   "block.wildfirefly.unlit_lantern": "โคมไฟไม่ติดไฟ",
   "entity.wildfirefly.firefly": "หิ่งห้อย",
 
-  "modmenu.summaryTranslation.wildfirefly": "Adds Fireflies and new firefly lanterns to Minecraft.",
-  "modmenu.descriptionTranslation.wildfirefly": "Adds Fireflies and new firefly lanterns to Minecraft."
+  "modmenu.summaryTranslation.wildfirefly": "เพิ่มหิ่งห้อยและตะเกียงหิ่งห้อยใน Minecraft",
+  "modmenu.descriptionTranslation.wildfirefly": "เพิ่มหิ่งห้อยและตะเกียงหิ่งห้อยใน Minecraft"
 }
