--- a/src/main/resources/assets/wildfirefly/lang/zh_cn.json
+++ b/src/main/resources/assets/wildfirefly/lang/zh_cn.json
@@ -23,6 +23,6 @@
   "block.wildfirefly.unlit_lantern": "未点亮的灯笼",
   "entity.wildfirefly.firefly": "萤火虫",
 
-  "modmenu.summaryTranslation.wildfirefly": "Adds Fireflies and new firefly lanterns to Minecraft.",
-  "modmenu.descriptionTranslation.wildfirefly": "Adds Fireflies and new firefly lanterns to Minecraft."
+  "modmenu.summaryTranslation.wildfirefly": "添加萤火虫和新的萤火虫灯笼至Minecraft。",
+  "modmenu.descriptionTranslation.wildfirefly": "添加萤火虫和新的萤火虫灯笼至Minecraft。"
 }
