--- a/src/main/resources/assets/wildfirefly/lang/th_th.json
+++ b/src/main/resources/assets/wildfirefly/lang/th_th.json
@@ -24,5 +24,8 @@
   "entity.wildfirefly.firefly": "หิ่งห้อย",
 
   "modmenu.summaryTranslation.wildfirefly": "เพิ่มหิ่งห้อยและตะเกียงหิ่งห้อยใน Minecraft",
-  "modmenu.descriptionTranslation.wildfirefly": "เพิ่มหิ่งห้อยและตะเกียงหิ่งห้อยใน Minecraft"
+  "modmenu.descriptionTranslation.wildfirefly": "เพิ่มหิ่งห้อยและตะเกียงหิ่งห้อยใน Minecraft",
+
+  "text.autoconfig.wildfirefly.title": "การตั้งต่าไวด์ฟายฟราย.",
+  "text.autoconfig.wildfirefly.option.flickeringFirefly": "หิ่งห้อยกระพิบ."
 }
